add header/start do menu only for desktop now

--- a/index.html
+++ b/index.html
@@ -23,11 +23,30 @@
 </head>
 
 <body>
-
-  <!-- Add your site or application content here -->
-  <p>Test, test, test.
-  <script src="js/app.js"></script>
-
+  <header class="wrapper">
+    <div class="top">
+      <div class="logo"></div>
+      <div class="social-media">
+        <a href="#"><img src="img/facebook.png" alt="facebook-icon"></a>
+        <a href="#"><img src="img/instagram.png" alt="instagram-icon"></a>
+        <a href="#"><img src="img/twitter.png" alt="twitter-icon"></a>
+        <a href="#"><img src="img/linkdin.png" alt="linkdin-icon"></a>
+      </div>
+      <div class="menu">
+        <li>
+          <a href="#">
+            <img src="img/hamburger-menu.png" alt="menu-icon"><p>MENU</p></a>
+          <ul>
+            <li><a href="#">CHECK US!</a></li>
+            <li><a href="#">OUT TEAM!</a></li>
+            <li><a href="#">PORTFOLIO!</a></li>
+            <li><a href="#">BRANDS!</a></li>
+          </ul>
+        </li>
+      </div>
+    </div>
+    </div>
+  </header>
 </body>
 
 </html>
