--- a/index.html
+++ b/index.html
@@ -33,16 +33,13 @@
         <a href="#"><img src="img/linkdin.png" alt="linkdin-icon"></a>
       </div>
       <div class="menu">
-        <li>
-          <a href="#">
-            <img src="img/hamburger-menu.png" alt="menu-icon"><p>MENU</p></a>
+            <img src="img/hamburger-menu.png" alt="menu-icon"><p>MENU</p>
           <ul>
-            <li><a href="#">CHECK US!</a></li>
+            <li><a href="#"><p>CHECK US!</p></a></li>
             <li><a href="#">OUT TEAM!</a></li>
             <li><a href="#">PORTFOLIO!</a></li>
             <li><a href="#">BRANDS!</a></li>
           </ul>
-        </li>
       </div>
     </div>
     </div>
