last edit today/ menu

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="menu">
             <img src="img/hamburger-menu.png" alt="menu-icon"><p>MENU</p>
           <ul>
-            <li><a href="#"><p>CHECK US!</p></a></li>
+            <li><a href="#">CHECK US!</a></li>
             <li><a href="#">OUT TEAM!</a></li>
             <li><a href="#">PORTFOLIO!</a></li>
             <li><a href="#">BRANDS!</a></li>
