add class to html and css

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <a href="#"><img src="img/linkdin.png" alt="linkdin-icon"></a>
       </div>
       <div class="menu">
-            <img src="img/hamburger-menu.png" alt="menu-icon"><p>MENU</p>
-          <ul>
-            <li><a href="#">CHECK US!</a></li>
-            <li><a href="#">OUT TEAM!</a></li>
-            <li><a href="#">PORTFOLIO!</a></li>
-            <li><a href="#">BRANDS!</a></li>
+            <img src="img/hamburger-menu.png" alt="menu-icon"><p class="menu-text">MENU</p>
+          <ul class="hamburger-menu-list">
+            <li class="hamburger-menu-index"><a class="hamburger-menu-a" href="#">CHECK US!</a></li>
+            <li class="hamburger-menu-index"><a class="hamburger-menu-a" href="#">OUT TEAM!</a></li>
+            <li class="hamburger-menu-index"><a class="hamburger-menu-a" href="#">PORTFOLIO!</a></li>
+            <li class="hamburger-menu-index"><a class="hamburger-menu-a" href="#">BRANDS!</a></li>
           </ul>
       </div>
     </div>
