--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 <body>
   <header class="wrapper">
     <div class="top">
-      <div class="logo"></div>
+      <div class="logo">
+        <img src="img/logo.png" alt="logo">
+      </div>
       <div class="social-media">
         <a href="#"><img src="img/facebook.png" alt="facebook-icon"></a>
         <a href="#"><img src="img/instagram.png" alt="instagram-icon"></a>
