--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
     </div>
     </div>
   </header>
+  <main class="wrapper">
+    <section class="section1">
+
+    </section>
+  </main>
 </body>
 
 </html>
