--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 </head>
 
 <body>
-  <header class="wrapper">
-    <div class="top">
+  <header class="wrapper top">
       <div class="logo">
         <img src="img/logo.png" alt="logo">
       </div>
@@ -37,19 +36,24 @@
       <div class="menu">
             <img src="img/hamburger-menu.png" alt="menu-icon"><p class="menu-text">MENU</p>
           <ul class="hamburger-menu-list">
-            <li class="hamburger-menu-index"><a class="hamburger-menu-a" href="#">CHECK US!</a></li>
-            <li class="hamburger-menu-index"><a class="hamburger-menu-a" href="#">OUT TEAM!</a></li>
-            <li class="hamburger-menu-index"><a class="hamburger-menu-a" href="#">PORTFOLIO!</a></li>
-            <li class="hamburger-menu-index"><a class="hamburger-menu-a" href="#">BRANDS!</a></li>
+            <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#">CHECK US!</a></li>
+            <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#">OUT TEAM!</a></li>
+            <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#">PORTFOLIO!</a></li>
+            <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#">BRANDS!</a></li>
           </ul>
       </div>
     </div>
     </div>
   </header>
   <main class="wrapper">
-    <section class="section1">
-
-    </section>
+    <section class="hero">
+        <p class="p-line">Need our help?</p>
+        <h1>TOP DESIGNERS</h1>
+        <button class="button-hero">CHECK US!</button>
+        <a class="hero-transition" href="#">
+          <p>⇓</p>
+        </a>
+      </section>
   </main>
 </body>
 
