add section about-us-work/mobile version too

--- a/index.html
+++ b/index.html
@@ -24,36 +24,63 @@
 
 <body>
   <header class="wrapper top">
-      <div class="logo">
-        <img src="img/logo.png" alt="logo">
-      </div>
-      <div class="social-media">
-        <a href="#"><img src="img/facebook.png" alt="facebook-icon"></a>
-        <a href="#"><img src="img/instagram.png" alt="instagram-icon"></a>
-        <a href="#"><img src="img/twitter.png" alt="twitter-icon"></a>
-        <a href="#"><img src="img/linkdin.png" alt="linkdin-icon"></a>
-      </div>
-      <div class="menu">
-            <img src="img/hamburger-menu.png" alt="menu-icon"><p class="menu-text">MENU</p>
-          <ul class="hamburger-menu-list">
-            <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#">CHECK US!</a></li>
-            <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#">OUT TEAM!</a></li>
-            <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#">PORTFOLIO!</a></li>
-            <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#">BRANDS!</a></li>
-          </ul>
-      </div>
+    <div class="logo">
+      <img src="img/logo.png" alt="logo">
+    </div>
+    <div class="social-media">
+      <a href="#"><img src="img/facebook.png" alt="facebook-icon"></a>
+      <a href="#"><img src="img/instagram.png" alt="instagram-icon"></a>
+      <a href="#"><img src="img/twitter.png" alt="twitter-icon"></a>
+      <a href="#"><img src="img/linkdin.png" alt="linkdin-icon"></a>
+    </div>
+    <div class="menu">
+      <img src="img/hamburger-menu.png" alt="menu-icon">
+      <p class="menu-text">MENU</p>
+      <ul class="hamburger-menu-list">
+        <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#">CHECK US!</a></li>
+        <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#">OUT TEAM!</a></li>
+        <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#">PORTFOLIO!</a></li>
+        <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#">BRANDS!</a></li>
+      </ul>
+    </div>
     </div>
     </div>
   </header>
   <main class="wrapper">
     <section class="hero">
-        <p class="p-line">Need our help?</p>
-        <h1>TOP DESIGNERS</h1>
-        <button class="button-hero">CHECK US!</button>
-        <a class="hero-transition" href="#">
-          <p>⇓</p>
-        </a>
-      </section>
+      <p class="p-line">Need our help?</p>
+      <h1>TOP DESIGNERS</h1>
+      <button class="button-hero">CHECK US!</button>
+      <a class="hero-transition" href="#">
+        <p>⇓</p>
+      </a>
+    </section>
+    <section class="about-us-work-section">
+      <div class="information">
+        <div class="info-1">
+          <h3 class="info-h">50</h3>
+          <p class="text-info-1">BIG PROJECTS</p>
+        </div>
+        <p class="text-info-2">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
+      <div class="information">
+        <div class="info-1 info-2">
+          <h3 class="info-h info-h-2">35</h3>
+          <p class="text-info-1">CLIENTS</p>
+        </div>
+        <p class="text-info-2">Ipsum dolor sit amet, consecletur adipiscinig elit, sed incdididunt!
+        </p>
+      </div>
+      <div class="information">
+        <div class="info-1 info-3">
+          <h3 class="info-h info-h-3">80</h3>
+          <p class="text-info-1">MONTHS</p>
+        </div>
+        <p class="text-info-2">Dolor sit amet, consectuetur adipisicing elit, sed do eiusmod tempor incididunt ut.
+
+        </p>
+      </div>
+    </section>
   </main>
 </body>
 
