add section our team/ mobile too

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
   <main class="wrapper">
     <section class="hero">
       <p class="p-line">Need our help?</p>
-      <h1>TOP DESIGNERS</h1>
+      <h1 class="h-class">TOP DESIGNERS</h1>
       <button class="button-hero">CHECK US!</button>
       <a class="hero-transition" href="#">
-        <p>⇓</p>
+        <p class="arrow-p">⇓</p>
       </a>
     </section>
     <section class="about-us-work-section">
@@ -77,8 +77,13 @@
           <p class="text-info-1">MONTHS</p>
         </div>
         <p class="text-info-2">Dolor sit amet, consectuetur adipisicing elit, sed do eiusmod tempor incididunt ut.
-
         </p>
+      </div>
+    </section>
+    <section class="our-team">
+      <div class="our-team-info">
+        <p class="p-line p-line1">Meet us!</p>
+        <h1 class="h-class">OUR TEAM</h1>
       </div>
     </section>
   </main>
