add section employees/mobile too

--- a/index.html
+++ b/index.html
@@ -86,7 +86,44 @@
         <h1 class="h-class">OUR TEAM</h1>
       </div>
     </section>
+    <section class="employees">
+      <div class="employees-section test1">
+        <div class="employees-part1"></div>
+        <div class="employees-part2">
+          <p class="text1-emplo1">ADRIANNA</p>
+          <p class="text1-emplo2">Senior Graphic Designer</p>
+          <p class="text1-emplo3">She is the graphic designer with 3 yers of professiona experience.</p>
+        </div>
+      </div>
+      <div class="employees-section">
+        <div class="employees-part2 employees-part3">
+          <p class="text1-emplo1">OLIVIA</p>
+          <p class="text1-emplo2">Art Director</p>
+          <p class="text1-emplo3">She is the art. director with 8 years of professional experience.</p>
+        </div>
+        <div class="employees-part1 employees-part4"></div>
+      </div>
+      <div class="employees-section test1">
+        <div class="employees-part1"></div>
+        <div class="employees-part2">
+          <p class="text1-emplo1">THOMAS</p>
+          <p class="text1-emplo2">Software Engenner</p>
+          <p class="text1-emplo3">He is the software engeneer with 5 years of professional experience.</p>
+        </div>
+      </div>
+      <div class="employees-section">
+        <div class="employees-part2 employees-part3">
+          <p class="text1-emplo1">TAYLOR</p>
+          <p class="text1-emplo2">CEO</p>
+          <p class="text1-emplo3">She is the boss here.</p>
+        </div>
+        <div class="employees-part1 employees-part4"></div>
+      </div>
+    </section>
   </main>
 </body>
 
 </html>
+
+
+<!--"dokleić menu position:sticky, dodać odnośniki na koniec"-->
