add next gap between section

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         </p>
       </div>
     </section>
-    <section class="our-team">
-      <div class="our-team-info">
+    <section class="between-sections">
+      <div class="between-sections-info">
         <p class="p-line p-line1">Meet us!</p>
         <h1 class="h-class">OUR TEAM</h1>
       </div>
@@ -118,6 +118,12 @@
           <p class="text1-emplo3">She is the boss here.</p>
         </div>
         <div class="employees-part1 employees-part4"></div>
+      </div>
+    </section>
+      <section class="between-sections">
+      <div class="between-sections-info">
+        <p class="p-line p-line1">Check out our projects!</p>
+        <h1 class="h-class">PORTFOLIO</h1>
       </div>
     </section>
   </main>
