Finish procejct/ add last two section/ footer/ sticky menu

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
   <header class="wrapper top">
     <div class="logo">
-      <img src="img/logo.png" alt="logo">
+      <a href="#top"><img src="img/logo.png" alt="logo"></a>
     </div>
     <div class="social-media">
       <a href="#"><img src="img/facebook.png" alt="facebook-icon"></a>
@@ -37,10 +37,10 @@
       <img src="img/hamburger-menu.png" alt="menu-icon">
       <p class="menu-text">MENU</p>
       <ul class="hamburger-menu-list">
-        <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#">CHECK US!</a></li>
-        <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#">OUT TEAM!</a></li>
-        <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#">PORTFOLIO!</a></li>
-        <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#">BRANDS!</a></li>
+        <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#about-us-work-section">CHECK US!</a></li>
+        <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#employees">OUT TEAM!</a></li>
+        <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#gallery">PORTFOLIO!</a></li>
+        <li class="hamburger-menu-element"><a class="hamburger-menu-a" href="#brands">BRANDS!</a></li>
       </ul>
     </div>
     </div>
@@ -55,7 +55,7 @@
         <p class="arrow-p">⇓</p>
       </a>
     </section>
-    <section class="about-us-work-section">
+    <section id="about-us-work-section">
       <div class="information">
         <div class="info-1">
           <h3 class="info-h">50</h3>
@@ -86,7 +86,7 @@
         <h1 class="h-class">OUR TEAM</h1>
       </div>
     </section>
-    <section class="employees">
+    <section id="employees">
       <div class="employees-section test1">
         <div class="employees-part1"></div>
         <div class="employees-part2">
@@ -120,13 +120,91 @@
         <div class="employees-part1 employees-part4"></div>
       </div>
     </section>
-      <section class="between-sections">
+    <section class="between-sections">
       <div class="between-sections-info">
         <p class="p-line p-line1">Check out our projects!</p>
         <h1 class="h-class">PORTFOLIO</h1>
       </div>
     </section>
+    <section id="gallery">
+      <img class="img-gallery" src="https://placehold.co/213x213/blue/blue/png" alt="blue-img" title="blue image">
+      <img class="img-gallery" src="https://placehold.co/213x213/yellow/yellow/png" alt="yellow-img"
+        title="yellow image">
+      <img class="img-gallery" src="https://placehold.co/213x213/black/black/png" alt="black-img" title="black image">
+      <img class="img-gallery" src="https://placehold.co/213x213/green/green/png" alt="green-img" title="green image">
+      <img class="img-gallery" src="https://placehold.co/213x213/gray/gray/png" alt="gray-img" title="gray image">
+      <img class="img-gallery" src="https://placehold.co/213x213/pink/pink/png" alt="pink-img" title="pink image">
+      <img class="img-gallery" src="https://placehold.co/213x213/purple/purple/png" alt="purple-img"
+        title="purple image">
+      <img class="img-gallery" src="https://placehold.co/213x213/orange/orange/png" alt="orange-img"
+        title="orange image">
+      <img class="img-gallery" src="https://placehold.co/213x213/turquoise/turquoise/png" alt="turquoise-img"
+        title="turquoise image">
+      <img class="img-gallery" src="https://placehold.co/213x213/red/red/png" alt="red-img" title="red image">
+      <img class="img-gallery img-gallery-hide" src="https://placehold.co/213x213/coral/coral/png" alt="coral-img"
+        title="coral image">
+      <img class="img-gallery img-gallery-hide" src="https://placehold.co/213x213/brown/brown/png" alt="brown-img"
+        title="brown image">
+      <img class="img-gallery img-gallery-hide" src="https://placehold.co/213x213/silver/silver/png" alt="silver-img"
+        title="silver image">
+      <img class="img-gallery img-gallery-hide" src="https://placehold.co/213x213/gold/gold/png" alt="gold-img"
+        title="gold image">
+      <img class="img-gallery img-gallery-hide" src="https://placehold.co/213x213/white/white/png" alt="white-img"
+        title="white image">
+      <img class="img-gallery img-gallery-hide" src="https://placehold.co/213x213/magenta/magenta/png" alt="magenta-img"
+        title="magenta image">
+      <img class="img-gallery img-gallery-hide" src="https://placehold.co/213x213/salmon/salmon/png" alt="salmon-img"
+        title="salmon image">
+      <img class="img-gallery img-gallery-hide" src="https://placehold.co/213x213/violet/violet/png" alt="violet-img"
+        title="violet image">
+    </section>
+    <section class="between-sections">
+      <div class="between-sections-info">
+        <p class="p-line p-line1 p-line2">We working for</p>
+        <h1 class="h-class">BRANDS</h1>
+      </div>
+    </section>
+    <section id="brands">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+      <img src="https://placehold.co/113x113/silver/FFFFFF/png" alt="brand-img" title="logo-brand" class="brands-img brands-img-hide">
+    </section>
   </main>
+  <footer class="wrapper">
+    <div class="info-footer">
+      <div class="footer-text"><h2 class="h-class-footer">OUR TEAM</h2><p class="p-class-footer">We are the best company in the entrie wordl!</p></div>
+      <div class="footer-text"><h2 class="h-class-footer">ABOUT</h2><p class="p-class-footer">We are the best company in the entrie wordl!</p></div>
+      <div class="footer-text"><h2 class="h-class-footer">CONTACT</h2><p class="p-class-footer">free@ template.com www.freetempalmete.com tel.+48 123 456 798</p></div>
+    </div>
+    <div class="footer-copyright">
+      <p> Copyright DSGN free use!</p>
+
+    </div>
+  </footer>
 </body>
 
 </html>
